--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -15,25 +15,16 @@ input[type="button"], */
   color: var(--white);
   border: 2px solid var(--blue-50);
   border-radius: var(--radius-sm);
+  box-shadow: 0px 4px 8px rgba(28, 34, 36, 0);
   box-sizing: border-box;
   cursor: pointer;
-  transition: border 0.2s, background 0.2s, color 0.2s ease-out;
-
-  /* &:before {
-    content: "";
-    display: inline-block;
-    width: 0;
-    height: 0;
-    border-radius: 50%;
-    border: 0 none;
-    margin-right: 0;
-    transition: all 0.5s;
-  } */
+  transition: border 0.2s, background 0.2s, color, box-shadow 0.2s ease-out;
 
   &:hover {
     background-color: var(--blue-40);
     color: var(--white);
     border: 2px solid var(--blue-40);
+    box-shadow: 0px 4px 8px rgba(28, 34, 36, 0.16);
   }
   &:active {
     background-color: var(--blue-60);
@@ -50,10 +41,15 @@ input[type="button"], */
     &:hover {
       background-color: transparent;
       color: var(--link-hover);
+      box-shadow: 0px 4px 8px rgba(28, 34, 36, 0.16);
+    }
+    &:active {
+      background-color: var(--blue-60);
+      border: 2px solid var(--blue-60);
     }
   }
 
-  &.btn-secondary {
+  /* &.btn-secondary {
     box-sizing: border-box;
     background: transparent;
     color: var(--link);
@@ -62,7 +58,7 @@ input[type="button"], */
       background-color: transparent;
       color: var(--link-hover);
     }
-  }
+  } */
 }
 
 button:disabled,
@@ -73,9 +69,16 @@ input[type="button"]:disabled,
   background: var(--gray-5);
   color: var(--gray-50);
   border: 2px solid var(--gray-5);
-
+  box-shadow: none;
   /* Set the [X] cursor while hovering a disabled link */
   cursor: not-allowed;
+  &:hover {
+    cursor: not;
+    background: var(--gray-5);
+    color: var(--gray-50);
+    border: 2px solid var(--gray-5);
+    box-shadow: none;
+  }
 }
 
 //
