--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -9,7 +9,7 @@ input {
   border-radius: var(--radius-sm);
   box-shadow: none;
   box-sizing: border-box;
-  transition: all 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out;
 
   &:focus {
     box-shadow: 0 0 0px 2px rgba(60, 166, 208, 1);
