--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -6,6 +6,7 @@ input[type="button"], */
 .btn {
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   font-size: 1rem;
   padding: 8px 16px;
   text-align: center;
@@ -34,18 +35,16 @@ input[type="button"], */
     box-shadow: 0 0 0px 2px rgba(60, 166, 208, 1);
   }
   &.btn-secondary {
-    box-sizing: border-box;
     background: var(--surface-color);
     color: var(--link);
     border: 2px solid var(--gray-30);
     &:hover {
-      background-color: transparent;
       color: var(--link-hover);
       box-shadow: 0px 4px 8px rgba(28, 34, 36, 0.16);
     }
     &:active {
-      background-color: var(--blue-60);
-      border: 2px solid var(--blue-60);
+      background-color: var(--gray-5);
+      /* border: 2px solid var(--blue-30); */
     }
   }
 
