--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -20,3 +20,15 @@ label {
   font-size: 14px;
   font-weight: 600;
 }
+
+.label-link {
+  font-size: 14px;
+}
+
+.label-flex {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+}
