--- a/src/css/base.css
+++ b/src/css/base.css
@@ -39,7 +39,7 @@ h5,
 h6 {
   line-height: 1;
   color: var(--text-1);
-  padding-top: 0.875rem;
+  /* padding-top: 0.875rem; */
 }
 
 ::selection {
@@ -51,7 +51,7 @@ h6 {
 h1,
 h2,
 h3 {
-  padding-bottom: 2px;
+  /* padding-bottom: 2px; */
   margin-bottom: 8px;
 }
 
