--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -14,6 +14,10 @@ input {
   &:focus {
     box-shadow: 0 0 0px 2px rgba(60, 166, 208, 1);
   }
+  &.block {
+    display: block;
+    width: 100%;
+  }
 }
 
 label {
