--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -30,10 +30,14 @@ input[type="button"], */
   &:active {
     background-color: var(--blue-60);
     border: 2px solid var(--blue-60);
+    box-shadow: 0px 4px 8px rgba(28, 34, 36, 0);
   }
   &:focus {
     box-shadow: 0 0 0px 2px rgba(60, 166, 208, 1);
   }
+
+  /* Secondary Button */
+
   &.btn-secondary {
     background: var(--surface-color);
     color: var(--link);
@@ -47,6 +51,26 @@ input[type="button"], */
       /* border: 2px solid var(--blue-30); */
     }
   }
+
+  /* Ghost Button */
+
+  &.btn-ghost {
+    background: transparent;
+    color: var(--link);
+    border: 0;
+    &:hover {
+      color: var(--link-hover);
+      background-color: var(--blue-0);
+      box-shadow: none;
+    }
+    &:active {
+      background-color: var(--blue-0);
+      color: var(--link-active);
+      /* border: 2px solid var(--blue-30); */
+    }
+  }
+
+  /* Block Button */
 
   &.btn-block {
     display: block;
