--- a/src/css/identity-styles.css
+++ b/src/css/identity-styles.css
@@ -2,10 +2,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 100%;
 }
 
 .identity-form-containter {
-  background-color: white;
+  background-color: var(--surface-color);
   width: 100%;
   max-width: 320px;
   padding: 24px;
