playing with storybook knobs

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -87,8 +87,10 @@ h6 {
 
 a {
   color: var(--link);
+  text-decoration: none;
 }
 
 a:hover {
   color: var(--link-hover);
+  text-decoration: underline;
 }
