--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -47,7 +47,7 @@ input[type="button"], */
       box-shadow: 0px 4px 8px rgba(28, 34, 36, 0.16);
     }
     &:active {
-      background-color: var(--gray-5);
+      background-color: var(--bg-color);
       /* border: 2px solid var(--blue-30); */
     }
   }
