--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -26,6 +26,7 @@ input[type="button"], */
     color: var(--white);
     border: 2px solid var(--blue-40);
     box-shadow: 0px 4px 8px rgba(28, 34, 36, 0.16);
+    /* transform: translate3d(0, -1px, 0); */
   }
   &:active {
     background-color: var(--blue-60);
@@ -59,7 +60,7 @@ input[type="button"], */
     color: var(--link);
     border: 0;
     &:hover {
-      color: var(--link-hover);
+      color: var(--link);
       background-color: var(--blue-0);
       box-shadow: none;
     }
