add margins to block buttons and inputs

--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -17,12 +17,18 @@ input {
   &.block {
     display: block;
     width: 100%;
+    margin: 4px 0 16px 0;
   }
 }
 
 label {
   font-size: 14px;
   font-weight: 600;
+}
+
+.label-regular-font {
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .label-link {
