--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -76,6 +76,7 @@ input[type="button"], */
   &.btn-block {
     display: block;
     width: 100%;
+    margin: 16px 0;
   }
 
   /* &.btn-secondary {
