--- a/src/css/identity-styles.css
+++ b/src/css/identity-styles.css
@@ -65,6 +65,13 @@ main {
   }
 }
 
+@media (max-width: 500px) {
+  .identity-form-containter {
+    width: 100vw;
+    min-width: unset;
+  }
+}
+
 @media (min-width: 768px) {
   .identity-form-containter {
     background-color: var(--surface-color);
