--- a/src/css/identity-styles.css
+++ b/src/css/identity-styles.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: var(--surface-color);
 }
 
 .logo {
@@ -22,8 +23,8 @@ main {
 }
 
 .identity-form-containter {
-  width: 100%;
-  min-width: 320px;
+  width: 100vw;
+  min-width: unset;
   padding: 40px 24px 24px 24px;
   border: none;
   box-sizing: border-box;
@@ -46,7 +47,6 @@ main {
 .identity-footer {
   width: 100%;
   padding: 48px 0 16px 0px;
-  /* flex-basis: 0; */
   & ul {
     padding: 0;
     list-style: none;
@@ -65,14 +65,17 @@ main {
   }
 }
 
-@media (max-width: 500px) {
+@media (min-width: 500px) {
   .identity-form-containter {
-    width: 100vw;
-    min-width: unset;
+    width: 100%;
+    min-width: 378px;
   }
 }
 
 @media (min-width: 768px) {
+  body {
+    background: var(--bg-1);
+  }
   .identity-form-containter {
     background-color: var(--surface-color);
     border: 1px solid var(--surface-border);
