base and error alerts

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,6 +6,7 @@
 @import "./_buttons.css";
 @import "./_loader.css";
 @import "./_forms.css";
+@import "./_alerts.css";
 
 :root {
   /* typography */
