--- a/src/css/_alerts.css
+++ b/src/css/_alerts.css
@@ -8,7 +8,7 @@
   }
   padding: 8px;
   margin-bottom: 16px;
-  color: var(gray-100);
+  color: var(--gray-100);
   background: var(--gray-5);
   border: 1px solid var(--gray-40);
   box-sizing: border-box;
