--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -45,3 +45,81 @@ label {
   align-items: flex-end;
   width: 100%;
 }
+
+/* Customize checkbox/radio label (the container) */
+.check-radio-container {
+  position: relative;
+  padding-left: 28px;
+  margin-bottom: 16px;
+  cursor: pointer;
+  /* font-size: 22px; */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  transition: 0.3s ease-in-out;
+  /* Hide the browser's default checkbox */
+  & input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  /* Create a custom checkbox */
+  & .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background: var(--input-bg);
+    border: 1px solid var(--input-border);
+    box-sizing: border-box;
+    border-radius: 2px;
+    /* margin-right: 8px; */
+    transition: box-shadow 0.3s ease-in-out, background-color 0.1s ease-in;
+  }
+  /* On mouse-over, add a grey background color */
+  &:hover input ~ .checkmark {
+    background-color: var(--bg-1);
+  }
+  /* When the checkbox is focused, add a blue border */
+  & input:focus ~ .checkmark {
+    box-shadow: 0 0 0px 2px rgba(60, 166, 208, 1);
+  }
+  /* When the checkbox is checked, add a blue background */
+  & input:checked ~ .checkmark {
+    background-color: var(--blue-50);
+    border: 1px solid var(--blue-60);
+  }
+  /* Create the checkmark/indicator (hidden when not checked) */
+  & .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  /* Show the checkmark when checked */
+  & input:checked ~ .checkmark:after {
+    display: block;
+  }
+  /* Style the checkmark/indicator */
+  & .checkmark:after {
+    left: 6px;
+    top: 3px;
+    width: 4px;
+    height: 8px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    border-radius: 1px;
+    transform: rotate(45deg);
+  }
+}
+
+.input-code {
+  & input.code-box {
+    width: 48px;
+  }
+  background: red;
+}
