--- a/src/css/_color.css
+++ b/src/css/_color.css
@@ -70,7 +70,7 @@
   --green-80: #003e17;
   --green-90: #002e11;
 
-  /* color usage */
+  /* color usage for light theme */
   --text-1: var(--gray-100);
   --text-2: var(--gray-90);
   --bg-1: var(--gray-0);
