--- a/src/css/base.css
+++ b/src/css/base.css
@@ -25,7 +25,7 @@ html {
   font-family: var(--font-sans);
 
   /* breakpoints */
-  --for-phone-only: (min-width: 768px) and (max-width: 992px);
+  /* --for-phone-only: (min-width: 768px) and (max-width: 992px); */
 }
 
 body {
@@ -35,12 +35,6 @@ body {
   color: var(--text-2);
   font-size: 1rem;
   line-height: 1.5;
-}
-
-@media var(--for-phone-only) {
-  body {
-    background: red;
-  }
 }
 
 h1,
@@ -74,15 +68,15 @@ h6 {
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 3rem;
 }
 
 h2 {
-  font-size: 1.85rem;
+  font-size: 2.25rem;
 }
 
 h3 {
-  font-size: 1.55rem;
+  font-size: 1.5rem;
 }
 
 h4 {
@@ -95,6 +89,7 @@ h5 {
 
 h6 {
   font-size: 0.875rem;
+  text-transform: uppercase;
 }
 
 a {
