--- a/src/css/identity-styles.css
+++ b/src/css/identity-styles.css
@@ -31,7 +31,7 @@ main {
   background-color: none;
   /* Card Shadow */
   box-shadow: none;
-  & > h4 {
+  & > .form-title {
     margin-top: 0;
     margin-bottom: 32px;
   }
