--- a/src/css/_typography.css
+++ b/src/css/_typography.css
@@ -1,25 +1,14 @@
 /* import adelle sans */
 @import url("https://use.typekit.net/yvk7fjz.css");
-/* import partials */
-@import "./normalize.css";
-@import "./_color.css";
-@import "./_buttons.css";
-@import "./_loader.css";
-@import "./_forms.css";
-@import "./_alerts.css";
-
 :root {
-  /* typography */
+  /* sans-serif font stack */
   --font-sans: "adelle-sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+  /* mono font sstack */
   /* --nc-font-mono: Consolas, monaco, 'Ubuntu Mono', 'Liberation Mono', 'Courier New', Courier, monospace; */
-
-  /* border-radii */
-  --radius-lg: 4px;
-  --radius-sm: 2px;
 }
-
 html {
   /* Set body font family and some finicky elements */
   font-family: var(--font-sans);
@@ -29,9 +18,6 @@ html {
 }
 
 body {
-  background: var(--bg-1);
-
-  /* Main body text */
   color: var(--text-2);
   font-size: 1rem;
   line-height: 1.5;
@@ -90,14 +76,4 @@ h5 {
 h6 {
   font-size: 0.875rem;
   text-transform: uppercase;
-}
-
-a {
-  color: var(--link);
-  text-decoration: none;
-}
-
-a:hover {
-  color: var(--link-hover);
-  text-decoration: underline;
 }
