better responsive logo sizing

--- a/src/css/identity-styles.css
+++ b/src/css/identity-styles.css
@@ -11,14 +11,22 @@ body {
 }
 
 .logo {
-  flex-basis: 0;
+  /* flex-grow: 1; */
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 32px;
+  & > img {
+    width: 60px;
+    height: auto;
+  }
 }
 
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-grow: 1;
 }
 
@@ -76,6 +84,24 @@ main {
   body {
     background: var(--bg-1);
   }
+
+  .logo {
+    display: flex;
+    align-items: flex-end;
+    /* padding-top: 10vh; */
+    /* padding-bottom: 32px; */
+    flex-grow: 1;
+    & > img {
+      width: 80px;
+      height: auto;
+    }
+  }
+
+  main {
+    justify-content: center;
+    flex-grow: 5;
+  }
+
   .identity-form-containter {
     background-color: var(--surface-color);
     border: 1px solid var(--surface-border);
@@ -84,6 +110,7 @@ main {
     box-shadow: 0px 8px 32px rgba(28, 34, 36, 0.08);
     border-radius: 6px;
   }
+
   .identity-footer {
     & ul {
       flex-direction: row;
