--- a/src/css/_buttons.css
+++ b/src/css/_buttons.css
@@ -35,6 +35,7 @@ input[type="button"], */
     box-shadow: 0px 4px 8px rgba(28, 34, 36, 0);
   }
   &:focus {
+    outline: none;
     box-shadow: 0 0 0px 2px rgba(60, 166, 208, 1);
   }
 
