--- a/src/css/atrium-styles.css
+++ b/src/css/atrium-styles.css
@@ -1,6 +1,6 @@
 /* import partials */
 @import "./normalize.css";
-@import "./_color.css";
+@import "./_variables.css";
 @import "./_typography.css";
 @import "./_base.css";
 @import "./_buttons.css";
